# Algorithm_Engineering

./: README.md
Answers/: README.md
Answers/code/: CMakeLists.txt
Answers/code/week_01/: hello.cpp  manual_parallel.cpp  pi_monte_carlo_parallel.cpp  pi_parallel.cpp
Answers/code/week_02/: continue_hack.cpp  race_condition.cpp  schedule_clause.cpp  unbalanced_workload.cpp
Answers/code/week_03/: mandelbrot.cpp  pi_parallel_manual.cpp
Answers/code/week_04/: merge_parallel.cpp  merge_sort.cpp
Answers/exam_assignments/: exam_assignments_01  exam_assignments_02  exam_assignments_03  exam_assignments_04  exam_assignments_05  exam_assignments_06  exam_assignments_07  exam_assignments_08  exam_assignments_09  exam_assignments_10  exam_assignments_11  exam_assignments_12  exam_assignments_13
Paper/: README.md  literature.bib  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.tex
Project/: CMakeLists.txt  README.md  build.sh  run.sh
Project/config/: preferences.json
Project/data/output/example_data/: image_data.csv
Project/include/: IO.h  MathUtil.h  Shape.h  SimulatedAnnealing.h  aligned_allocator.h
Project/include/Different_Shapes/: Bullseye.h  Circle.h  Dots.h  LineShape.h
Project/src/: IO.cpp  Main.cpp  MathUtil.cpp  Shape.cpp  SimulatedAnnealing.cpp  visualization.py
Project/src/Different_Shapes/: Bullseye.cpp  Circle.cpp  Dots.cpp  LineShape.cpp
